--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "author": "EvertonGavioli <vertopge@hotmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
   },
   "scripts": {
-    "dev": "node ./src/server.js"
+    "dev": "nodemon ./src/server.js"
   }
 }
