--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "mongoose": "^5.7.3"
   },
   "devDependencies": {
-    "nodemon": "^1.19.3"
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.3",
+    "supertest": "^4.0.2"
   },
   "scripts": {
-    "dev": "nodemon ./src/server.js"
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js --ignore __tests__",
+    "test": "jest --forceExit"
   }
 }
