--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "scripts": {
     "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js --ignore __tests__",
-    "test": "jest --forceExit"
+    "test": "set NODE_ENV=test& jest --forceExit"
   }
 }
